<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Leitner Box</string>
    <string name="generic_error">Something was wrong :(</string>

    <string name="main_view_day_number">"Day %1$d"</string>
    <string name="leitner_view_first_day">Your first day!</string>
    <string name="main_view_levels_to_review">"to review: Levels %1$s"</string>
    <string name="leitner_view_first_day_info">Add cards at level 1</string>

    <string name="countdown_view_study_time">Study time: %1$s</string>
    <string name="countdown_view_completed_time">Time to study!</string>
    <string name="countdown_view_advance_time_error">The button will be enabled %d hours before your study time</string>

    <string name="intro_title_1">Ese que llega tiene musho peligro</string>
    <string name="intro_descripcion_1">Lorem fistrum a wan no te digo trigo por no llamarte Rodrigor de la pradera diodeno sexuarl.</string>
    <string name="intro_title_2">Ese que llega por la gloria de mi madre</string>
    <string name="intro_descripcion_2">Lorem fistrum a gramenawer al ataquerl llevame al sircoo llevame al sircoo quietooor diodenoo quietooor pupita fistro.</string>

    <string name="settings">Settings</string>
    <string name="settings_general_title">General</string>
    <string name="settings_current_day_title">Current day</string>
    <string name="settings_current_day_dialog_title">Choose your current day</string>
    <string name="settings_notification_title">Notifications</string>
    <string name="settings_notification_study_time">Study hour</string>
    <string name="settings_notification_enable_title">Enable notifications</string>
    <string name="settings_notification_enable_subTitle">Study reminders notifications</string>

    <string name="about_title">About</string>
    <string name="about_descripcion">Lorem fistrum qué dise usteer torpedo a gramenawer papaar papaar qué dise usteer pecador ahorarr amatomaa. A peich tiene musho peligro qué dise usteer papaar papaar qué dise usteer. A gramenawer torpedo quietooor de la pradera.</string>
    <string name="about_source_code">Source code</string>
    <string name="about_source_code_link">github.com/mrebollob/leitner-box</string>
    <string name="about_version">Version</string>
    <string name="about_license">License</string>
    <string name="about_license_name">Apache 2.0</string>
    <string name="about_tutorial">Tutorial</string>
    <string name="about_tutorial_descripcion">Show app tutorial</string>
    <string name="about_recommended_reading">Recommended reading</string>
    <string name="about_recommended_reading_descripcion">ncase.me/remember</string>

    <string name="notification_title">Study time</string>
    <string name="notification_content">It\'s time to review your cards</string>

    <string-array name="levels_options">
        <item>3</item>
        <item>5</item>
        <item>7</item>
    </string-array>

    <plurals name="hour_format">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="minute_format">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <string name="notifTitleFirst">Time to head to bed.</string>
    <string name="notifTitleSingular">It is %d minute past your bedtime!</string>
    <string name="notifTitlePlural">It is %d minutes past your bedtime!</string>
    <string name="notifTitleFunky">%d</string>

    <string name="channel_name">Bedtime Reminders</string>
    <string name="channel_description">Bedtime notifications remind you around your bedtime to go to sleep.</string>

    <string name="notifAction">I\'m going to sleep</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
